--- a/PROYECTO/pom.xml
+++ b/PROYECTO/pom.xml
@@ -21,9 +21,9 @@
   
   <dependencies>
   	<dependency>
-  		<groupId>com.google.code.gson</groupId>
-  		<artifactId>gson</artifactId>
-  		<version>2.8.5</version>
-  	</dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-csv</artifactId>
+	    <version>1.5</version>
+	</dependency>
   </dependencies>
 </project>
